build: upgrade from Java 8 to Java 21